--- a/index.html
+++ b/index.html
@@ -7,16 +7,331 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
+<H1>
+<p style="text-align:left;">Room Dimensions<br>
+    <br>
+</p>
+</H1>
+
 <body>
 
-<label for="room-x">Room X</label>
-<input id="room-x" type="text"/>
+<p style="text-align:left;">
+<label for="length">Length (ft)</label>
+<input id="length" type="text"/><br>
+    <br>
+</p>
 
-<label for="room-y">Room Y</label>
-<input id="room-y" type="text"/>
+<p style="text-align:left;">
+<label for="width">Width (ft)</label>
+<input id="width" type="text"/><br>
+    <br>
+</p>
 
-<label for="room-z">Room Z</label>
-<input id="room-z" type="text"/>
+<p style="text-align:left;">
+<label for="height">Height (ft)</label>
+<input id="height" type="text"/><br>
+    <br>
+</p>
+
+<button type="button">Calculate</button><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-s6z2{text-align:center}
+    .tg .tg-baqh{text-align:center;vertical-align:top}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+    .tg .tg-yw4l{vertical-align:top}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj" colspan="7">Surface Area (ft2)</th>
+    </tr>
+    <tr>
+        <td class="tg-s6z2">Total</td>
+        <td class="tg-baqh">Front Wall</td>
+        <td class="tg-yw4l">Back Wall</td>
+        <td class="tg-yw4l">Left Wall</td>
+        <td class="tg-yw4l">Right Wall</td>
+        <td class="tg-yw4l">Ceiling</td>
+        <td class="tg-yw4l">Floor</td>
+    </tr>
+    <tr>
+        <td class="tg-baqh"></td>
+        <td class="tg-baqh"></td>
+        <td class="tg-yw4l"></td>
+        <td class="tg-yw4l"></td>
+        <td class="tg-yw4l"></td>
+        <td class="tg-yw4l"></td>
+        <td class="tg-yw4l"></td>
+    </tr>
+</table><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-s6z2{text-align:center}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj">Volume (ft3)</th>
+    </tr>
+    <tr>
+        <td class="tg-s6z2"></td>
+    </tr>
+</table><br>
+<br>
+
+<H1>
+    <p style="text-align:left;">Surface Materials<br>
+        <br>
+    </p>
+</H1>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-s6z2{text-align:center}
+    .tg .tg-baqh{text-align:center;vertical-align:top}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj" colspan="2">Material of Each Surface</th>
+    </tr>
+    <tr>
+        <td class="tg-s6z2">Front wall</td>
+        <td class="tg-baqh">Back wall</td>
+    </tr>
+    <tr>
+        <td class="tg-baqh">Left wall</td>
+        <td class="tg-baqh">Right wall</td>
+    </tr>
+    <tr>
+        <td class="tg-baqh">Ceiling</td>
+        <td class="tg-baqh">Floor</td>
+    </tr>
+</table><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-s6z2{text-align:center}
+    .tg .tg-baqh{text-align:center;vertical-align:top}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+    .tg .tg-amwm{font-weight:bold;text-align:center;vertical-align:top}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj" colspan="7">Absorption Coefficient (a)</th>
+    </tr>
+    <tr>
+        <td class="tg-s6z2"></td>
+        <td class="tg-amwm" colspan="6">Frequency (Hz)</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Materials</td>
+        <td class="tg-amwm">125</td>
+        <td class="tg-amwm">250</td>
+        <td class="tg-amwm">500</td>
+        <td class="tg-amwm">1,000</td>
+        <td class="tg-amwm">2,000</td>
+        <td class="tg-amwm">4,000</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Wood</td>
+        <td class="tg-baqh">0.28</td>
+        <td class="tg-baqh">0.22</td>
+        <td class="tg-baqh">0.17</td>
+        <td class="tg-baqh">0.09</td>
+        <td class="tg-baqh">0.10</td>
+        <td class="tg-baqh">0.11</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Carpet</td>
+        <td class="tg-baqh">0.08</td>
+        <td class="tg-baqh">0.24</td>
+        <td class="tg-baqh">0.57</td>
+        <td class="tg-baqh">0.69</td>
+        <td class="tg-baqh">0.71</td>
+        <td class="tg-baqh">0.73</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Brick</td>
+        <td class="tg-baqh">0.03</td>
+        <td class="tg-baqh">0.03</td>
+        <td class="tg-baqh">0.03</td>
+        <td class="tg-baqh">0.04</td>
+        <td class="tg-baqh">0.05</td>
+        <td class="tg-baqh">0.07</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Concrete</td>
+        <td class="tg-baqh">0.10</td>
+        <td class="tg-baqh">0.05</td>
+        <td class="tg-baqh">0.06</td>
+        <td class="tg-baqh">0.07</td>
+        <td class="tg-baqh">0.09</td>
+        <td class="tg-baqh">0.08</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Sheetrock</td>
+        <td class="tg-baqh">0.29</td>
+        <td class="tg-baqh">0.10</td>
+        <td class="tg-baqh">0.05</td>
+        <td class="tg-baqh">0.04</td>
+        <td class="tg-baqh">0.07</td>
+        <td class="tg-baqh">0.09</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Water</td>
+        <td class="tg-baqh">0.008</td>
+        <td class="tg-baqh">0.008</td>
+        <td class="tg-baqh">0.013</td>
+        <td class="tg-baqh">0.015</td>
+        <td class="tg-baqh">0.02</td>
+        <td class="tg-baqh">0.025</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Glass</td>
+        <td class="tg-baqh">0.35</td>
+        <td class="tg-baqh">0.25</td>
+        <td class="tg-baqh">0.18</td>
+        <td class="tg-baqh">0.12</td>
+        <td class="tg-baqh">0.07</td>
+        <td class="tg-baqh">0.04</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Plaster</td>
+        <td class="tg-baqh">0.013</td>
+        <td class="tg-baqh">0.015</td>
+        <td class="tg-baqh">0.02</td>
+        <td class="tg-baqh">0.03</td>
+        <td class="tg-baqh">0.04</td>
+        <td class="tg-baqh">0.05</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Marble</td>
+        <td class="tg-baqh">0.01</td>
+        <td class="tg-baqh">0.01</td>
+        <td class="tg-baqh">0.01</td>
+        <td class="tg-baqh">0.01</td>
+        <td class="tg-baqh">0.02</td>
+        <td class="tg-baqh">0.02</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Fiberglass</td>
+        <td class="tg-baqh">0.22</td>
+        <td class="tg-baqh">0.82</td>
+        <td class="tg-baqh">0.99</td>
+        <td class="tg-baqh">0.99</td>
+        <td class="tg-baqh">0.99</td>
+        <td class="tg-baqh">0.99</td>
+    </tr>
+</table><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+    .tg .tg-amwm{font-weight:bold;text-align:center;vertical-align:top}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj" colspan="7">Reverberation Time (RT60)</th>
+    </tr>
+    <tr>
+        <td class="tg-hgcj">Frequency (Hz)</td>
+        <td class="tg-amwm">125</td>
+        <td class="tg-amwm">250</td>
+        <td class="tg-amwm">500</td>
+        <td class="tg-amwm">1,000</td>
+        <td class="tg-amwm">2,000</td>
+        <td class="tg-amwm">4,000</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Time (s)</td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+    </tr>
+</table><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-s6z2{text-align:center}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj">RT average (s)</th>
+    </tr>
+    <tr>
+        <td class="tg-s6z2"></td>
+    </tr>
+</table><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-s6z2{text-align:center}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj">Schroeder Frequency (Hz)</th>
+    </tr>
+    <tr>
+        <td class="tg-s6z2"></td>
+    </tr>
+</table><br>
+<br>
+
+<style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+    .tg .tg-hgcj{font-weight:bold;text-align:center}
+    .tg .tg-amwm{font-weight:bold;text-align:center;vertical-align:top}
+</style>
+<table class="tg">
+    <tr>
+        <th class="tg-hgcj" colspan="5">Modal Analysis</th>
+    </tr>
+    <tr>
+        <td class="tg-hgcj">Mode #</td>
+        <td class="tg-amwm">1</td>
+        <td class="tg-amwm">2</td>
+        <td class="tg-amwm">3</td>
+        <td class="tg-amwm">4</td>
+    </tr>
+    <tr>
+        <td class="tg-amwm">Frequency (Hz)</td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+        <td class="tg-amwm"></td>
+    </tr>
+</table>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
